Fixed bug where ALL nav-links had white font (only landing pages' should). Added black color to nav-links to increase contrast

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,6 +81,10 @@ div.menu-item {
 }
 
 .nav-link {
+  color: black !important;
+}
+
+.index-nav-link {
   color: white !important;
 }
 
